--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "starts": "nodemon app.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
+    "react-router-dom": "^6.23.1",
+    "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
