--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "bulma": "^1.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -16,11 +18,14 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
